Contrast error fixed

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -77,6 +77,7 @@ blockquote {
   place-items: center;
   padding: 0;
   margin: 2rem 0;
+  background-color: var(--color-secondary);
   color: var(--color-light);
 
   > * {
